# crm-dashboard

./: .env.example  LICENSE  README.md  app.config.ts  next.config.ts  package-lock.json  package.json  proxy.ts
app/: globals.css  layout.tsx  page.tsx
app/admin/settings/: page.tsx
app/admin/team-members/: page.tsx
app/admin/users/: page.tsx
app/api/activity/: route.ts
app/api/departments/: route.ts
app/api/intake-types/: route.ts
app/api/internal-clients/: route.ts
app/api/teams/: route.ts
backend/: .gitignore  pyproject.toml  requirements.txt  seed_portfolio_analytics.py
backend/crm_sync/: __init__.py  config.py  main.py  test.py
backend/crm_sync/core/: __init__.py  exceptions.py  models.py
backend/crm_sync/db/: __init__.py  batch.py  clients.py  connection.py  crn.py  engine.py  registries.py  verify.py  writer.py
backend/crm_sync/docs/: README.md
backend/crm_sync/tests/: __init__.py  example_job.py
backend/crm_sync/utils/: __init__.py  monitoring.py  nudge.py
backend/crm_sync/validation/: __init__.py  rules.py
backend/portfolio_data/: __init__.py  pull.py  push.py  test.py
backend/portfolio_data/core/: __init__.py  config.py  exceptions.py  models.py  periods.py  sleeves.py
backend/portfolio_data/db/: __init__.py  connection.py  reader.py  schema.py  verify.py  writer.py
backend/portfolio_data/docs/: README.md
backend/portfolio_data/validation/: __init__.py  mirrors.py  rules.py  vocabulary.py
docs/: roles-and-account-types.md
scripts/: backup-db.ts  migrate-duckdb-to-sqlite.ts  restore-db.ts  seed-db.ts  sync-portfolio.ts
(+161 files in other folders)
